// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeSelect Tree renders when "loading" property is set to "true" 1`] = `
<div
  className="tree"
>
  <div
    className="message"
  >
    <Loader
      className=""
      size={35}
    />
  </div>
</div>
`;

exports[`TreeSelect Tree renders when "showMore" property is set to "true" 1`] = `
<div
  className="tree"
>
  <div
    className="message"
  >
    Список пуст
  </div>
  <Button
    block={false}
    className="showMoreButton"
    disabled={false}
    onClick={[Function]}
    outline={false}
    type="button"
    variant="SIMPLE"
  >
    Показать еще
  </Button>
</div>
`;

exports[`TreeSelect Tree renders when no options provided 1`] = `
<div
  className="tree"
>
  <div
    className="message"
  >
    Список пуст
  </div>
</div>
`;

exports[`TreeSelect Tree renders when options provided 1`] = `
<div
  className="tree"
>
  <Node
    data={
      Object {
        "children": Array [
          "node0$node0",
          "node0$node1",
        ],
        "id": "node0",
        "loading": false,
        "parent": null,
        "uploaded": true,
        "value": Object {
          "label": "node0",
          "value": "node0",
        },
      }
    }
    disabled={false}
    getNodeLabel={[Function]}
    key="node0"
    onClick={[Function]}
    onLoadChildren={[Function]}
    searchValue=""
    selected={false}
    showMore={false}
  >
    <Component />
  </Node>
  <Node
    data={
      Object {
        "children": Array [
          "node1$node0",
          "node1$node1",
        ],
        "id": "node1",
        "loading": false,
        "parent": null,
        "uploaded": true,
        "value": Object {
          "label": "node1",
          "value": "node1",
        },
      }
    }
    disabled={false}
    getNodeLabel={[Function]}
    key="node1"
    onClick={[Function]}
    onLoadChildren={[Function]}
    searchValue=""
    selected={false}
    showMore={false}
  >
    <Component />
  </Node>
</div>
`;
